samples/_failures_safe/1761494233_069c67_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f6e5c1e5.c: In function ‘main’:
./samples/SAFE/__tmp_f6e5c1e5.c:198:9: error: expected declaration or statement at end of input
  198 |         fprintf(stderr, "Empty input\n");
      |         ^~~~~~~
./samples/SAFE/__tmp_f6e5c1e5.c:198:9: error: expected declaration or statement at end of input
